Add ui.js, update logic

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
 <body>
     <form name="todo">
         <input type="text" name="name" placeholder="Add new ToDo item"><br>
-        <input type="text" name="type" placeholder="type"><br>
+        <select>
+            <option disabled selected> -- select an option -- </option>
+            <option value="private">Private</option>
+            <option value="buissiness">Buissines</option>
+        </select>
     </form>
     <button id="addItem">New Item</button>
     
