Update bindClickListeners method

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <form name="todo">
             <input type="text" name="name" placeholder="Add new ToDo item">
             <br>
-            <select>
+            <select name="type">
                 <option disabled selected> -- select an option -- </option>
                 <option value="private">Private</option>
                 <option value="buissiness">Buissines</option>
