Add support for delete list item, add Velocity dependency

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 
     </ul>
 
+    <script type="text/javascript" src="./js/dep.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 </body>
 
