Add support for moving doing list items in done list

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,10 @@
         <button id="addItem">New Item</button>
     </div>
 
-    <ul id="todo">
+    <ul id="todo" class="list">
+    </ul>
 
+    <ul id="done" class="list">
     </ul>
 
     <script type="text/javascript" src="./js/dep.js"></script>
